[package]
name = "rust_os"
version = "0.1.0"
edition = "2021"

[[test]]
name = "should_panic"
harness = false

[dependencies]
bootloader = "0.9.22"
spin = "0.9.4"
uart_16550 = "0.2.18"
volatile = "0.2.6"
x86_64 = "0.14.10"

[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x4",
    "-serial",
    "stdio",
    "-display",
    "none",
]
test-success-exit-code = 33
