[package]
name = "rust_os"
version = "0.1.0"
edition = "2021"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
bootloader = { version = "0.9.22", features = ["map_physical_memory"] }
crossbeam-queue = { version = "0.3.6", default-features = false, features = ["alloc"] }
futures-util = { version = "0.3.24", default-features = false, features = ["alloc"] }
linked_list_allocator = "0.10.1"
pc-keyboard = "0.5.1"
pic8259 = "0.10.2"
spin = "0.9.4"
uart_16550 = "0.2.18"
volatile = "0.2.6"
x86_64 = "0.14.10"

[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x4",
    "-serial",
    "stdio",
    "-display",
    "none",
]
test-success-exit-code = 33
